--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   badges: ^1.1.1
   intl: ^0.16.1
   flutter_bloc: ^6.0.5
+  http: ^0.12.2
+  flutter_form_builder: ^3.13.5
 
 dev_dependencies:
   flutter_test:
